k8s/Deployment-beta.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-sensor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-sensor
  template:
    metadata:
      labels:
        app: app-sensor
        version: beta
    spec:
      containers:
      - name: app-sensor
        image: "manscalh/app-sensor:latest"
        imagePullPolicy: Always
        resources:
        ports:
        - containerPort: 3001
