k8s/6IngressGateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway-k3s
spec:
  selector:
    istio: ingressgateway
  servers:
    - port: 
        number: 80
        name: http
        protocol: http2
      hosts:
      - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-gateway-vs
spec:
  hosts: 
  - "*"
  gateways:
  - ingress-gateway-k3s
  http:
    - route:  
      - destination:
          host: app-gateway-service
          subset: v1
        weight: 100
      - destination:
          host: app-gateway-service
          subset: v2
        weight: 0
