k8s/VirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-gateway-vs
spec:
  hosts: 
  - "*"
  gateways:
  - ingress-gateway-k3s
  http:
    - route:  
      - destination:
          host: app-gateway-service
          subset: v1
        weight: 50
      - destination:
          host: app-gateway-service
          subset: v2
        weight: 50
